load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_foreign_cc//tools/build_defs:cmake.bzl", "cmake_external")


cc_library(
    name = "lru_cache",
    deps = ["//lru_cache:lru_cache"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "dynamic_lru_cache",
    deps = ["//lru_cache:dynamic_lru_cache"],
    visibility = ["//visibility:public"],
)
