load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "test_main",
    srcs = ["test_main.cc"],
    deps = ["//:catch2"],
)

cc_library(
    name = "catch_util",
    hdrs = ["catch_util.h"],
    deps = ["//:catch2"],
)

cc_library(
    name = "range_matcher_util",
    hdrs = ["range_matcher_util.h"],
    deps = [":catch_util"],
)

cc_test(
    name = "lru_cache_test",
    srcs = ["lru_cache_test.cc"],
    deps = [
        ":test_main",
        ":catch_util",
        ":range_matcher_util",
        "//lru_cache:lru_cache",
    ],
)
