load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "test_main",
    srcs = ["test_main.cc"],
    deps = ["@com_github_catchorg_catch2//:catch2"],
)

cc_library(
    name = "catch_util",
    hdrs = ["catch_util.h"],
    deps = ["@com_github_catchorg_catch2//:catch2"],
)

cc_library(
    name = "range_matcher_util",
    hdrs = ["range_matcher_util.h"],
    deps = [":catch_util"],
)

cc_library(
    name = "pointer_matcher_util",
    hdrs = ["pointer_matcher_util.h"],
    deps = [":catch_util"],
)

cc_library(
    name = "key_type",
    hdrs = ["key_type.h"],
)

cc_test(
    name = "lru_cache_test",
    srcs = ["lru_cache_test.cc"],
    deps = [
        ":test_main",
        ":catch_util",
        ":key_type",
        ":range_matcher_util",
        "//lru_cache:lru_cache",
    ],
)

cc_test(
    name = "lru_cache_test_asan",
    srcs = ["lru_cache_test.cc"],
    copts = ["-fsanitize=address", "-fno-omit-frame-pointer", "-g"],
    linkopts = ["-fsanitize=address"],
    deps = [
        ":test_main",
        ":catch_util",
        ":key_type",
        ":range_matcher_util",
        "//lru_cache:lru_cache",
    ],
)

cc_test(
    name = "throwing_provider_test",
    srcs = ["throwing_provider_test.cc"],
    deps = [
        ":test_main",
        ":catch_util",
        ":key_type",
        ":range_matcher_util",
        ":pointer_matcher_util",
        "//lru_cache:lru_cache",
    ],
)

cc_test(
    name = "traits_util_test",
    srcs = ["traits_util_test.cc"],
    defines = ["CATCH_CONFIG_RUNTIME_STATIC_REQUIRE"],
    deps = [
        ":test_main",
        ":catch_util",
        "//lru_cache:traits_util",
    ],
)
